# stone-manager

./: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
src/: app.ts  connect.ts  dev.ts  global.d.ts  home.ts  licenses.ts  main.ts  pairing.ts  settings.ts  style.css  style.scss
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: android_backend.rs  lib.rs  macos_bridge.m  main.rs
src/assets/: licenses.json
src/components/: button.ts  header.ts  list.ts  range.ts  section.ts  select.ts  toast.ts  toggle.ts
src/pages/: add-device.ts  dev.ts  home.ts  licenses.ts  onboarding.ts  pairing.ts  settings.ts
src/services/: battery.ts  bluetooth.ts  device-info.ts  gaia.ts  lamp.ts  volume.ts
src/state/: active.ts  connection.ts  device-data.ts  devices.ts  multi-control.ts  registry.ts  telemetry.ts
src/styles/: button.scss  header.css  header.scss  list.scss  range.scss  section.scss  select.scss  toast.scss  toggle.scss
src/utils/: dom.ts  formatter.ts  navigation.ts
