[package]
name = "stone_manager"
version = "0.1.0"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2.5.5", features = [] }
cc = "1.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serialport = "4.3"
tauri = { version = "2.5.5", features = [] }
once_cell = "1.19"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
